<?xml version="1.0"?>
<package format="2">
  <name>geodetic_utils</name>
  <version>1.0.0</version>
  <description>Simple library for geodetic to local ENU converting coordinates (NavSatFix to tf and odometry)</description>

  <author>Roman Fedorenko</author>

  <maintainer email="frontwise@gmail.com">Roman Fedorenko</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

   <!-- Dependencies. -->
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographiclib_conversions</depend>
  <!--std_srvs provides the Empty service used to reset the gps reference ]-->
  <depend>std_srvs</depend>
</package>
